<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/event_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/colorWhite"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <org.angmarch.views.NiceSpinner
        android:id="@+id/event_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/event_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/event_date_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Ingresa la fecha"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/event_date_select"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/event_date_text"
                    android:text="Fecha"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:icon="@drawable/ic_event_white_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/event_reiterative_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/event_reiterative_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/event_reiterative_type_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    android:visibility="gone" />

                <GridLayout
                    android:id="@+id/event_reiterative_type_multiple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:columnCount="14"
                    android:rowCount="1"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/monday_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_monday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/tuesday_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_tuesday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/wednesday_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_wednesday" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/thursday_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_thursday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/friday_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_friday" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/saturday_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_saturday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/sunday_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_sunday" />

                </GridLayout>


                <RadioGroup
                    android:id="@+id/event_reiterative_type_single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/event_radio_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_monday" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/event_radio_tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_tuesday" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/event_radio_wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_wednesday" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/event_radio_thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_thursday" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/event_radio_friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_friday" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/event_radio_saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_saturday" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/event_radio_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/core_short_sunday" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_hour_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Ingresa la hora"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/event_hour_select"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/event_date_text"
                    android:text="Hora"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    app:icon="@drawable/ic_access_time_white_24dp" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_description"
                android:height="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="¿Qué quieres que te recordemos?"
                android:inputType="textPersonName"
                android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_event_cancel"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Cancelar"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_event_save"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:text="Guardar"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>